# configurations

./: .emacs  .gitignore  .gitmodules  .minttyrc  .zshrc  README.md  append_prompt.sh  bindings.el  btree-persp.yaml  chromegit.sh  clean_path.py  config.el  coplien_cpp.php  coplien_hpp.php  dotemacs  dotemacs.el  dotgitconfig.conf  dotminttyrc  dotminttyrc.conf  dotocamlinit  dotzshrc  dotzshrc.sh  dump_sizeof.sh  function_minimum.php  getters_cpp.php  getters_hpp.php  index-persp.yaml  irmin-persp.yaml  my_bindings.el  my_config.el  my_cpptemplates.el  my_functions.el  new_var.php  notepadpp.sh  ocamldep-dot.ml  persp_of_yaml.py  promptssh.sh  qgis_shortcuts.py  qgis_shortcuts.xml  repr-persp.yaml  (+3 more)
adventures/: 2020-12-16-macos.md  2021-01-25-ocaml-profiling.md  2021-02-25-tezos-macos.md
misc/: functor-stack.drawio
my_ecaml/: .ocamlformat  context_of_line.ml  dune  dune-project  misc.ml  my-ecaml.opam  persp.ml  plugin.ml
nasm-mode/: Matthieu-Hauglustaine-nasm-mode.el
old/: Form.hpp  hpp_import.php  import_constructors.php  import_getters.php  import_getters_self.php  import_nested_classes.php  import_setters.php  import_setters_self.php
php_snippets/: Form.hpp  hpp_import.php  import_constructors.php  import_getters.php  import_getters_self.php  import_init_list.php  import_member_functions.php  import_methods.php  import_operators.php  import_pure_methods.php  import_setters.php  import_setters_self.php  import_statics.php  namespace.php  new_nested_classes.php  parse_hpp.php
scripts/: clean_path.py  dump_sizeof.sh  mywhere  sed_hashes.py
