(env
  (dev     (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs -g)))
  (release (flags (-w +1..3+5..28+30..39+43+46..47+49..57+61..62-40-26 -strict-sequence -strict-formats -short-paths -keep-locs   )))
)

(executable
 (name plugin)
 (public_name my-ecaml)
 (libraries ecaml str)
 (preprocess
  (pps ppx_jane -allow-unannotated-ignores))
 (modes native shared_object))

(rule
 (copy plugin.so my-ecaml.so))

(alias
 (name install)
 (deps my-ecaml.so))
